fixed strange spacing on sections

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,11 +31,7 @@ body > div.container {
 }
 
 section {
-  min-height: 100vh;
-  display: grid;
-  place-items: center;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 3fr;
+  padding-top: 2rem;
 }
 
 section#about {
